--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,7 +134,6 @@ p.msg{
 }
 
 .navbar{
-	visibility: hidden;
 	position:fixed;
 	width:80px;
 	top:var(--header-height);
@@ -159,20 +158,24 @@ p.msg{
 }
 .navbar li{
 	list-style:none;
-	color:var(--primary);
+	/* color:var(--primary); */
 	padding: 1rem 0;
 }
 .navbar a{
 	text-decoration:none;	
+	transition: font-size 500ms;
+	color: var(--primary-soft);
 }
-.navbar a:focus{
-	color:green;
-}
+
 .navbar a:visited{
 	color:var(--primary)
 }
 .navbar a:hover{
-	color:green;
+	color:var(--primary);
+	font-size:1.3rem
+}
+.navbar a:focus{
+	color: var(--primary);
 }
 
 main .hero{
@@ -476,10 +479,22 @@ main .hero{
 			color:var(--primary);
 		
 		}
-		/* body main div{
-			width:60%;
-			margin:auto;
-		} */
+		header .nav{
+			display:none;
+		}
+		header .navbar{
+			position:static;
+			width: auto;
+			top:0;
+			left:0	
+		}
+		.navbar ul{
+			flex-direction: initial;
+		}
+		.navbar ul>li{
+			padding: 1rem;
+			font-size:1.15rem;
+		}
 		main .hero{
 			background-image: url(../images/beauty-desktop.jpg);
 			background-position:0 0%;
